--- a/app/stylesheets/non-modular/_verification.sass
+++ b/app/stylesheets/non-modular/_verification.sass
@@ -129,7 +129,7 @@
     padding: 8px
     border: 1px solid #C9C4B4
     box-shadow: inset #DDD 0px 0px 3px 2px, rgba(255, 255, 255, 1.0) 0px 1px 1px
-    width: 377px !important
+    width: 382px !important
     color: $black
     border-radius: 4px 0px 0px 4px
     span.dk_arrow.button.blue 
